--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,6 +6,10 @@ html {
     font-size: 1.1em;
 }
 
+h1 {
+    font-size: 1.5em;
+}
+
 body {
     height: 100%;
 }
@@ -25,7 +29,8 @@ header {
     /* display: flex;
     justify-content: center; */
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-bottom: 3em;
 }
 
 header a {
@@ -33,6 +38,11 @@ header a {
     /* position: absolute;
     left: 0; */
     align-self: center;
+}
+
+header h1 {
+    /* grid-column: 2 / 4; */
+    text-align: center;
 }
 
 header img {
