make input fields required

--- a/views/bevestiging.ejs
+++ b/views/bevestiging.ejs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bevestiging</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
+    <script src="./scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -18,7 +20,6 @@
         <h1>profiel aangemaakt</h1>
     </header>
     <main class="bevestiging">
-        <!-- 140.8 -->
         <img src="../images/check.png" alt="">
         <p>profiel aangemaakt!</p>
         <a href="inloggen.html">Inloggen</a>
