--- a/views/welkom.ejs
+++ b/views/welkom.ejs
@@ -12,7 +12,13 @@
 </head>
 
 <body>
-    <h1>Welkom <%= naam %> !</h1>
+    <header>
+        <a href="./index.html">
+            <img src="./images/back.png" alt="" href="./index.html">
+            <p>terug</p>
+        </a>
+        <h1>Welkom <%= naam %> !</h1>
+    </header>
 </body>
 
 </html>
