--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -89,6 +89,45 @@ input:focus::placeholder {
 
 /* index.html */
 
+
+main>section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+    margin-top: 4em;
+}
+
+.slider {
+    display: flex;
+    width: 16em;
+    overflow: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+}
+
+section>section:nth-of-type(1) {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+
+article {
+    margin-right: 1em;
+    width: 100%;
+    flex-shrink: 0;
+    scroll-snap-align: start;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+section:nth-of-type(2) a {
+    margin: 0.5em;
+    display: inline-block;
+}
+
+
 .zero_state {
     display: flex;
     justify-content: center;
