--- a/views/registreren.ejs
+++ b/views/registreren.ejs
@@ -21,14 +21,18 @@
     </header>
     <main>
         <form method="post" action="/profiel_aanmaken">
+            <p>
+                <%=errorMessage%>
+            </p>
             <label for="fname">voornaam</label>
-            <input type="text" name="fname" id="fname" placeholder="voornaam" required>
+            <input type="text" name="fname" id="fname" placeholder="voornaam" required value=<%=fname%>>
             <label for="lname">achternaam</label>
-            <input type="text" name="lname" id="lname" placeholder="achternaam" required>
+            <input type="text" name="lname" id="lname" placeholder="achternaam" required value=<%=lname%>>
             <label for="email">email</label>
-            <input type="email" name="email" id="email" placeholder="email" required>
+            <input type="email" name="email" id="email" placeholder="email" required value=<%=email%>>
             <label for="password">wachtwoord</label>
-            <input type="password" name="password" id="password" minlength="8" placeholder="wachtwoord" required>
+            <input type="password" name="password" id="password" minlength="8" placeholder="wachtwoord" required
+                value=<%=password%>>
             <input type="hidden" name="longitude" id="longitude">
             <input type="hidden" name="latitude" id="latitude">
             <input type="submit" value="registreren">
